--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h5p-editor-attention-seeker",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Attention Seeker editor widget",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/otacke/h5p-editor-attention-seeker.git"
+    "url": "git+https://bitbucket.org/calmisland/h5p-editor-attention-seeker/"
   },
   "keywords": [
     "h5p",
@@ -19,17 +19,16 @@
   "author": "Oliver Tacke",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
     "babel-loader": "^8.2.2",
-    "cross-env": "^5.2.1",
-    "css-loader": "^2.1.1",
-    "mini-css-extract-plugin": "^1.3.4",
-    "node-sass": "^4.13.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^2.0.0",
+    "sass": "^1.36.0",
     "regenerator-runtime": "^0.13.7",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^12.0.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.0.0"
   }
